# MuseScore

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  appfactory.cpp  exported_functions.cmake  webapi_export.cpp
src/app/configs/data/: shortcuts.xml
src/app/internal/: guiapp.cpp
src/appshell/qml/MuseScore/AppShell/: appmenumodel.cpp  maintoolbarmodel.cpp
src/editude/: CMakeLists.txt  editudemodule.cpp  editudemodule.h
src/editude/internal/: annotationoverlay.cpp  annotationoverlay.h  editudeservice.cpp  editudeservice.h  editudeuiactions.cpp  editudeuiactions.h  editudeutils.h  operationtranslator.cpp  operationtranslator.h  presenceoverlay.cpp  presenceoverlay.h  scoreapplicator.cpp  scoreapplicator.h
src/editude/internal/platform/macos/: appnap.h  appnap.mm
src/editude/internal/platform/stub/: appnap.cpp
src/editude/qml/Editude/: AnnotationSidePanel.qml  CMakeLists.txt  EditudeNotationOverlay.qml  EditudeTouchToolbar.qml  editudeannotationmodel.cpp  editudeannotationmodel.h  editudeannotationoverlaymodel.cpp  editudeannotationoverlaymodel.h  editudepresencemodel.cpp  editudepresencemodel.h
src/editude/testing/: editudetestactions.cpp  editudetestactions.h  editudetestbridge.cpp  editudetestbridge.h  editudetestdriver.cpp  editudetestdriver.h  editudetestserver.cpp  editudetestserver.h
src/editude/tests/: CMakeLists.txt  editudeservice_reconnect_tests.cpp  environment.cpp  operationtranslator_tests.cpp  scoreapplicator_tests.cpp
src/editude/tests/data/: e2e_blank.mscx  empty_measure.mscx
src/engraving/api/v1/: util.cpp  util.h
src/engraving/dom/: engravingobject.cpp  masterscore.cpp
src/engraving/editing/: undo.h
src/engraving/internal/: palettescoreprovider.cpp
src/framework/audio/driver/platform/web/: webaudiodriver.cpp  webaudiodriver.h
src/framework/audio/engine/internal/: eventaudiosource.cpp
src/framework/audio/main/: audiomodule.cpp
src/framework/audio/main/internal/: player.cpp  player.h
src/framework/audio/main/platform/general/: generalsoundfontcontroller.cpp
src/framework/audio/main/platform/web/: websoundfontcontroller.cpp  websoundfontcontroller.h
src/framework/global/: CMakeLists.txt  globalmodule.cpp
src/framework/interactive/internal/platform/web/: webinteractive.cpp  webinteractive.h
src/notationscene/internal/: notationuiactions.cpp
src/notationscene/qml/MuseScore/NotationScene/: CMakeLists.txt  NotationView.qml  NoteInputBar.qml  notationcontextmenumodel.cpp  noteinputbarmodel.cpp
src/playback/internal/: playbackcontroller.cpp
src/project/internal/: projectactionscontroller.cpp  projectconfiguration.cpp
src/web/appjs/: install.js  webapi.cpp  webapi.h
src/web/appjs/distr/: audio_worklet_processor.js  audiodriver.js  muimpl.js  qtloader.js
src/web/appjs/viewer/: viewer.html
src/web/appshell/: CMakeLists.txt  appshellmodule.cpp
src/web/appshell/internal/: applicationuiactions.cpp  applicationuiactions.h  appshellconfiguration.h
src/web/appshell/qml/: AppMenuBar.qml  Main.qml  NotationFrame.qml
src/web/appshell/view/: navigableappmenumodel.cpp  notationpagemodel.cpp  notationpagemodel.h
src/web/audioengine/: CMakeLists.txt  engine_export.cpp  webaudioengine.cpp  webaudioengine.h
src/web/audioengine/qt_stubs/: QSettings  QString
